# TPM

./: .gitignore  CMakeLists.txt  install_dependencies  launch_script  submit  submit_chameleon_benchmarks  submit_tpm_benchmarks
algorithms/: Makefile  main.c
algorithms/dense/: cholesky.h  counters.h  invert.h  lu.h  qr.h  svd.h  sylsvd.h  sylvester.h
algorithms/include/: common.h  counters.h  populate.h  print.h  utils.h
algorithms/sparse/: poisson.h  sparselu.h
benchmarks/: benchmarks2.txt  benchmarks_tasks.txt  benchs_number_of_tasks  selected_benchmarks.txt  test_benchmarks.txt
benchmarks_chameleon/: all_benchmarks.txt  test_benchmarks.txt
benchmarks_chameleon/gflops/: gflops.py  potrf_times.csv  time.py
benchmarks_tpm/: main.c  tpm_benchmark
benchmarks_tpm/dense/: cholesky.h  invert.h  lu.h  qr.h  sylsvd.h
benchmarks_tpm/include/: utils.h
benchmarks_tpm/sparse/: sparselu.h
data/: energy_data_cholesky_1.csv  energy_data_cholesky_2.csv  energy_data_cholesky_3.csv  energy_data_cholesky_32768_1.csv  manipulate_data.py  plot.py
data/cascadelake/: counters_dgetrf_nopiv_1.csv  counters_dgetrs_nopiv_1.csv  counters_dlauum_1.csv  counters_dpotrf_1.csv  counters_dpotrs_1.csv  (+99 more)
include/: tpm.h  tracing.h
ml/: main.py
ml/plot/: plot.py
model/: main.py
power/: CMakeLists.txt  Makefile  main.c
scripts/: install_dependencies
src/: tracing.c
trace/: CMakeLists.txt  tpm_trace.c  tpm_trace.h
tracelib/: CMakeLists.txt
tracelib/include/: tpm.h  tracing.h
tracelib/include/internal/: common.h  dump.h  task.h  utils.h
tracelib/src/: tracing.c
(+1561 files in other folders)
